--- a/content/projects/berlinwallbreaker/index.mdx
+++ b/content/projects/berlinwallbreaker/index.mdx
@@ -10,29 +10,33 @@ areas:
 
 [DEPÔT DE CODE SUR GITHUB](https://github.com/myselfhimself/BerlinWallBreaker/)
 
-Imaginez-vous peindre en chocolat, découper des betteraves et des pommes, positionner vos coquilles Saint-Jacques du marché...
-...pour un jeu-vidéo à base de stop motion, qui parle d'amitié et d'amour possiblement impossible.
+## En bref
 
-C'est ce que j'ai fait sur un peu plus d'un an depuis fin 2019 à Mondeville / Caen en Normandie.
+**A propos :** Un jeu vidéo sur Le Havre et Caen et la réconciliation d'une amitié.
 
-BerlinWallBreaker est un jeu à propos de ce que j'appelle les murs de Berlin (ou juste murs relationnels). Qu'est-ce qui peut dépasser les murs d'une amitié qui s'arrête du du jour au lendemain ?
+**Technologies :** p5.js, p5.play, WebGL, GLSL, stop-motion, design culinaire, Samsung Galaxy S (2010), Thinkpad T400 (2008).
 
-Je n'en sais rien, mais j'ai fait ce jeu vidéo à propos de deux amis qui n'ont jamais pu se revoir après un déménagement en Normandie. L'un au Havre, l'autre à Caen, avec des caractéristiques alimentaires particulières de chaque territoire.
-
-BerlinWallBreaker s'inspire de ma contribution à [L'Envol de Samuel Yal](https://www.samuelyal.com/envol/) (dessin image par image en chocolat, du vol d'un oiseau), un court-métrage communautaire en période de COVID-19. Sauf que cette fois, le concept de nourriture animée est généralisé à la plupart des éléments graphiques d'un casse-brique sur trois niveau : fond d'écran fixe ; briques, balle et palette animées. 
-Le découpage de sprites issues de photographie reprend en beaucoup moins poussé un générateur de jeu fait par un designer dont le nom m'échappe, habitué du [Fablab La Villette Makerz](https://villettemakerz.com/fablab-accueil/).
+**Perspectives :** Le découpage de sprites issues de photographie reprend en beaucoup moins poussé un générateur de jeu fait par un designer dont le nom m'échappe, habitué du [Fablab La Villette Makerz](https://villettemakerz.com/fablab-accueil/). Des participants d'atelier de design culinaire pourraient très bien recréer leur propre jeu, en en changeant les éléments graphiques, à l'aide d'un appareil photo, de gabarits et d'un logiciel de découpe automatique d'images.
 
 
-## Spécificités techniques du jeu
+## Détails
 
+• développement web avec vision extrêmement low-tech
 
-- développement web avec vision extrêmement low-tech
-- certains sprites on demandé de cuisiner un peu (crêpes végan..)
-- extraction en batch des objets de premier plans avec un [script BASH + G'MIC CLI](https://github.com/myselfhimself/BerlinWallBreaker/blob/2de82a149c52694614cbdd3bf1d4ef3ad2805855/sprites/food/gmic_extract_foregrounds.bash) ouvrant une fenêtre interactive de pose de points d'analyse
-- aucune base de données ni cookie ; gestion de l'état du jeu par ancre dans l'URL, avec des mots clés opacifiés liés à la Normandie ("langueter", "livarot"...)
-- fait seulement avec des logiciels libres : Inkscape, Blender3d, GIMP, G'MIC
-- tourne sur un ordinateur vieux de 2010 (Thinkpad T400), photographié avec un smartphone de 2008 (Samsung Galaxy S)
-- utilisation des bibliothèques [p5.js](http://www.p5js.org/) (la version JavaScript du célèbre Processing) et [p5.play](http://molleindustria.github.io/p5.play/) (gestion facilitée de sprites et collisions)
-- écran d'accueil mélangeant 2D générative (inspirée d'un set de draps IKEA) et objets 3D, dont le logo fait avec la police BLionTale
-- choix de la langue dès le premier écran
-- transitions entre niveaux en WebGL avec un pixel shader de particules animées grâce à une [technique sans multiplication polygonale de @Hamoid sur le forum Processing](https://discourse.processing.org/t/fragment-shader-too-many-uniforms-error/17603/15) et [la fonction textToPoints de p5js](https://p5js.org/reference/#/p5.Font/textToPoints)
+• certains sprites on demandé de cuisiner un peu (crêpes végan..)
+
+• extraction en batch des objets de premier plans avec un [script BASH + G'MIC CLI](https://github.com/myselfhimself/BerlinWallBreaker/blob/2de82a149c52694614cbdd3bf1d4ef3ad2805855/sprites/food/gmic_extract_foregrounds.bash) ouvrant une fenêtre interactive de pose de points d'analyse
+
+• aucune base de données ni cookie ; gestion de l'état du jeu par ancre dans l'URL, avec des mots clés opacifiés liés à la Normandie ("langueter", "livarot"...)
+
+• fait seulement avec des logiciels libres : Inkscape, Blender3d, GIMP, G'MIC
+
+• tourne sur un ordinateur vieux de 2010 (Thinkpad T400), photographié avec un smartphone de 2008 (Samsung Galaxy S)
+
+• utilisation des bibliothèques [p5.js](http://www.p5js.org/) (la version JavaScript du célèbre Processing) et [p5.play](http://molleindustria.github.io/p5.play/) (gestion facilitée de sprites et collisions)
+
+• écran d'accueil mélangeant 2D générative (inspirée d'un set de draps IKEA) et objets 3D, dont le logo fait avec la police BLionTale
+
+• choix de la langue (anglais, français) en amont
+
+• transitions entre niveaux en WebGL avec un pixel shader de particules animées grâce à une [technique sans multiplication polygonale de @Hamoid sur le forum Processing](https://discourse.processing.org/t/fragment-shader-too-many-uniforms-error/17603/15) et [la fonction textToPoints de p5js](https://p5js.org/reference/#/p5.Font/textToPoints)
