BerlinWallBreaker: better description (more)

--- a/content/projects/berlinwallbreaker/index.mdx
+++ b/content/projects/berlinwallbreaker/index.mdx
@@ -3,20 +3,22 @@ cover: "./bwb_home.png"
 date: "2021-06-04"
 title: "Jeu vidéo BerlinWallBreaker"
 areas:
-  - Mondeville 
+  - Mondeville, Normandie 
 ---
 
-[JOUEZ À BERLINWALLBREAKER MAINTENANT DANS VOTRE NAVIGATEUR](https://myselfhimself.github.io/BerlinWallBreaker/)
+➥ [JOUEZ À BERLINWALLBREAKER MAINTENANT DANS VOTRE NAVIGATEUR](https://myselfhimself.github.io/BerlinWallBreaker/)
 
-[DEPÔT DE CODE SUR GITHUB](https://github.com/myselfhimself/BerlinWallBreaker/)
+➥ [DEPÔT DE CODE SUR GITHUB](https://github.com/myselfhimself/BerlinWallBreaker/)
 
 ## En bref
 
-**A propos :** Un jeu vidéo sur Le Havre et Caen et la réconciliation d'une amitié.
+**A propos :** Un jeu vidéo web en stop-motion culinaire sur Le Havre, Caen et la réconciliation d'amis.
+
+** Inspiration :** Ma contribution en chocolat à [L'Envol de Samuel Yal](https://www.youtube.com/watch?v=BAFxX6WV5gk&t=70s). Le stand de stop-motion du [NaFilm - Musée national du film, Prague, Tchéquie](http://www.nafilm.org/en/).
 
 **Technologies :** p5.js, p5.play, WebGL, GLSL, stop-motion, design culinaire, Samsung Galaxy S (2010), Thinkpad T400 (2008).
 
-**Perspectives :** Le découpage de sprites issues de photographie reprend en beaucoup moins poussé un générateur de jeu fait par un designer dont le nom m'échappe, habitué du [Fablab La Villette Makerz](https://villettemakerz.com/fablab-accueil/). Des participants d'atelier de design culinaire pourraient très bien recréer leur propre jeu, en en changeant les éléments graphiques, à l'aide d'un appareil photo, de gabarits et d'un logiciel de découpe automatique d'images.
+**Perspectives :** Le découpage manuel de sprites issues de photographies reprend en beaucoup moins poussé un générateur de jeu fait par un designer dont le nom m'échappe, habitué du [Fablab La Villette Makerz](https://villettemakerz.com/fablab-accueil/). Des participants d'atelier de design culinaire pourraient très bien recréer leur propre jeu de casse-briques, en en recréant les éléments graphiques, à l'aide d'un appareil photo, de gabarits et d'un logiciel de découpe automatique d'images.
 
 
 ## Détails
