adding villejuif drawing and 3d fish model info

--- a/content/projects/dessinsvillejuif/index.mdx
+++ b/content/projects/dessinsvillejuif/index.mdx
@@ -15,3 +15,5 @@ L'idée était de dessiner tous les soirs quelque chose, elle et moi, chacun dan
 Des choses simples mais si possible tous les jours... pour reprendre de la joie et de la dextérité, particulièrement après traitements forts et arrière-fond de dépression.
 
 Je ne mets pas les dessins de la jeune fille, pour autant très beaux. Aucune art-thérapie formelle ici, juste une amitié artistique qui nait.
+
+Volontairement aucune retouche, à une époque où tout le monde en fait. Les doigts et mains sont un watermark des temps modernes.
