--- a/content/projects/dessinsvillejuif/index.mdx
+++ b/content/projects/dessinsvillejuif/index.mdx
@@ -6,13 +6,13 @@ areas:
   - Villejuif 
 ---
 
-Dessins à la plume et aux feutres POSCA, ou crayons Giotto, depuis fin juin 2021.
+Dessins à la plume, stylo gel, aux crayons aquarellables, feutres POSCA, ou crayons gras Giotto, depuis fin juin 2021.
 
-Ces dessins ont été réalisés aux côtés d'une nouvelle amie Vietnamienne de 14 ans, atteinte d'un cancer et soignée à l'Institut Gustave Roussy.
+Une partie des dessins a été réalisée aux côtés d'une nouvelle amie Vietnamienne de 14 ans, atteinte d'un cancer.
 
 L'idée était de dessiner tous les soirs quelque chose, elle et moi, chacun dans son carnet Moleskine vierge.
 
-Des choses simples mais si possible tous les jours... pour reprendre de la joie et de la dextérité, particulièrement après traitements forts et arrière-fond de dépression.
+Des choses simples mais si possible souvent... pour reprendre de la joie et de la dextérité, particulièrement après traitements forts et arrière-fond de dépression.
 
 Je ne mets pas les dessins de la jeune fille, pour autant très beaux. Aucune art-thérapie formelle ici, juste une amitié artistique qui nait.
 
