--- a/content/projects/dessinsvillejuif/index.mdx
+++ b/content/projects/dessinsvillejuif/index.mdx
@@ -1,6 +1,6 @@
 ---
 cover: "./eiffel.jpg"
-date: "2021-06-25"
+date: "2021-06-25 - 2021-09-16"
 title: "Dessins de Villejuif"
 areas:
   - Villejuif 
